<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_content" >

    <LinearLayout style="@style/layout_header" >

        <TextView
            android:id="@+id/text_title_connection"
            style="@style/fragmentTitle"
            android:text="@string/title_connection" />
    </LinearLayout>

    <TextView
        android:id="@+id/subtitle_setup_connection"
        style="@style/fragmentSubtitle" />

    <LinearLayout style="@style/layout_body" >

        <TextView
            android:id="@+id/text_connection"
            style="@style/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_connection" />

        <RadioGroup
            android:id="@+id/radio_group_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <RadioButton
                android:id="@+id/radio_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/wifi" />

            <RadioButton
                android:id="@+id/radio_bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/bluetooth" />
            
            <RadioButton
                android:id="@+id/radio_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:visibility="invisible"
                android:text="@string/by_call" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout style="@style/layout_footer" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_backward_setup_connection"
                style="@style/button_footer_left"
                android:text="@string/btn_backward" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_forward_setup_connection"
                style="@style/button_footer_right"
                android:text="@string/btn_forward" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>