<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_content" >

    <LinearLayout style="@style/layout_header" >

        <TextView
            android:id="@+id/title_setup_start"
            style="@style/fragmentTitle"
            android:text="@string/title_setup_start" />
    </LinearLayout>

    <LinearLayout style="@style/layout_body" >

        <TextView
            android:id="@+id/text_setup_start"
            style="@style/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_setup_start" />
    </LinearLayout>

    <LinearLayout style="@style/layout_footer" >

        <Button
            android:id="@+id/btn_forward_setup_start"
            style="@style/button_footer_single"
            android:text="@string/btn_start" />
    </LinearLayout>

</LinearLayout>