<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_content" >

    <LinearLayout style="@style/layout_header" >

        <TextView
            android:id="@+id/text_titleConnectionBaby"
            style="@style/fragmentTitle"
            android:text="@string/title_connection" />
    </LinearLayout>

    <TextView
        android:id="@+id/subtitle_setup_connection_baby"
        style="@style/fragmentSubtitle"
        android:text="@string/subtitle_baby_mode" />

    <LinearLayout style="@style/layout_body" >

        <TextView
            android:id="@+id/text_connection"
            style="@style/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_connection_baby" />

        <RadioGroup
            android:id="@+id/radio_group_connection_baby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <RadioButton
                android:id="@+id/radio_wifi_baby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/wifi" />

            <RadioButton
                android:id="@+id/radio_wifi_direct_baby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/wifip2p" />

            <RadioButton
                android:id="@+id/radio_bluetooth_baby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/bluetooth" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout style="@style/layout_footer" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_backwardSetupConnectionBabyMode"
                style="@style/button_footer_left"
                android:text="@string/btn_backward" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_forwardSetupConnectionBabyMode"
                style="@style/button_footer_right"
                android:text="@string/btn_forward" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>