<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/dialog_overview_baby_connectivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/dialog_overview_baby_wifi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/wifi" />

        <RadioButton
            android:id="@+id/dialog_overview_baby_bluetooth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bluetooth" />
        
        <RadioButton
            android:id="@+id/dialog_overview_baby_call"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/by_call" />
    </RadioGroup>

</LinearLayout>