<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_content" >

    <LinearLayout style="@style/layout_header" >

        <TextView
            android:id="@+id/title_connection_parents"
            style="@style/fragmentTitle"
            android:text="@string/title_connection" />
    </LinearLayout>

    <LinearLayout style="@style/layout_body" >

        <TextView
            android:id="@+id/text_connection_parents"
            style="@style/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_connection_parents" />

        <RadioGroup
            android:id="@+id/radio_group_connection_parents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <RadioButton
                android:id="@+id/radio_wifi_parents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/wifi" />

            <RadioButton
                android:id="@+id/radio_wifi_direct_parents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/wifip2p" />

            <RadioButton
                android:id="@+id/radio_bluetooth_parents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/bluetooth" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout style="@style/layout_footer" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_backward_connection_parents"
                style="@style/button_footer_left"
                android:text="@string/btn_backward" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_forward_connection_parents"
                style="@style/button_footer_right"
                android:text="@string/btn_forward" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>