<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_content" >

    <LinearLayout style="@style/layout_header" >

        <TextView
            android:id="@+id/title_search"
            style="@style/fragmentTitle"
            android:text="@string/title_search" />
    </LinearLayout>

    <LinearLayout style="@style/layout_body" >

        <ListView
            android:id="@+id/listView_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:drawable/divider_horizontal_dark" >
        </ListView>
    </LinearLayout>

    <LinearLayout style="@style/layout_footer" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_backward_search"
                style="@style/button_footer_left"
                android:text="@string/btn_backward" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_forward_search"
                style="@style/button_footer_right"
                android:text="@string/btn_forward" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>